[gd_scene load_steps=5 format=3 uid="uid://bgy18vnatsxqo"]

[ext_resource type="Texture2D" uid="uid://o68saofgrq87" path="res://assets/main/beach-ball-sheet.png" id="1_hp1e7"]
[ext_resource type="Script" path="res://src/main/beach-ball.gd" id="1_i2eh7"]
[ext_resource type="AudioStream" uid="uid://c7ykqjd1i3x7w" path="res://assets/main/sfx/beach-ball-bounce.wav" id="3_lowhv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdnlp"]
size = Vector2(80, 40)

[node name="BeachBall" type="Node2D" groups=["beach_balls"]]
script = ExtResource("1_i2eh7")

[node name="SpriteElevator" type="Node2D" parent="."]
editor_description = "Holds the aerial coordinate of the child sprite."
scale = Vector2(0.467, 0.467)

[node name="Sprite" type="Sprite2D" parent="SpriteElevator"]
position = Vector2(0, -33)
texture = ExtResource("1_hp1e7")
hframes = 4
vframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_hdnlp")

[node name="RedrawTimer" type="Timer" parent="."]

[node name="BounceSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lowhv")
bus = &"Sfx"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="RedrawTimer" to="." method="_on_RedrawTimer_timeout"]
